[gd_scene load_steps=5 format=3 uid="uid://qs7b7us5mqfj"]

[ext_resource type="Script" path="res://game/core/camera/cam.gd" id="1_803c3"]
[ext_resource type="Script" path="res://game/core/camera/cam_shake_module.gd" id="2_wyfii"]
[ext_resource type="Script" path="res://game/core/camera/cam_follow_target_module.gd" id="3_0ds83"]
[ext_resource type="Script" path="res://game/core/camera/cam_free_look_module.gd" id="4_layk5"]

[node name="cam" type="Node3D"]
script = ExtResource("1_803c3")
cam_offset_z = 17.0
cam_fov = 100

[node name="cam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 12, 12)
fov = 100.0

[node name="cam_shake" type="Node" parent="cam"]
script = ExtResource("2_wyfii")

[node name="cam_follow" type="Node" parent="cam"]
script = ExtResource("3_0ds83")

[node name="cam_free_look" type="Node" parent="cam"]
script = ExtResource("4_layk5")
